--- a/tests/paper/jitter2D_sketch.qmd
+++ b/tests/paper/jitter2D_sketch.qmd
@@ -9,8 +9,14 @@ bibliography: references.bib
 
 We have included some ideas and examples for Jittered scatter plots in this document.
 
-Some related work: [@trutschl2003intelligently], [@park2017gatherplots], [@christensen2018progressive], [@ohbuchi1996quasi], [@pharr2023physically], [@cambou2017quasi], [@idrus2021swarm], [@marcilio2021explorertree], [@van2021blue], [@park2023gatherplot] and [@rave2024cluttering] .
 
+## Related work
+
+Some alternative plots to deal with over plotting are gather plots [@park2017gatherplots, @park2023gatherplot], also in dimensionality reduction vizualization exploretree plot[@marcilio2021explorertree], and recently integral images to "de-cluttering" scatter plots [@rave2024cluttering]. 
+
+Adding noise in quasi-random way appears in swarm plot [@idrus2021swarm], blue noise plots [@van2021blue], SOM based jittering [@trutschl2003intelligently], or beeswarm plot (REF???). Usually these methods are designed to jitter in one dimension.  
+
+Quasi-random methods has being studied, @christensen2018progressive compare methods for quasirandom genrators in 2D. These methods are used in several scenarios, applied to copulas [@cambou2017quasi] or quasi montecarlo[@ohbuchi1996quasi] 
 
 
 ## Goal and structure
@@ -20,14 +26,17 @@ Introduce methods for jittering in 2D and implement an R package that extends `g
 -   Show application examples
 -   Discuss limitations and next steps
 
-
 # Methods
-Combine 2 parameters to describe jittering in 2D, where each parameter has two possible levels.
 
--   Noise: Random or Quasi-random
+Combine 2 parameters to describe jittering in 2D, each parameter has two possible levels.
 
--   Direction: Global or Local
+-   Noise: Random (R) or Quasi-random (Q)
 
+-   Direction: Global (G) or Local (L)
+
+Combining the 2 parameters gives 4 ways to jitter scatter plots: R-L, R-G, Q-L, Q-G.
+
+## Adding noise in 2D
 Noise is related to how the jittering is generated. Traditionally in 1D, jittering is randomly generated with a uniform distribution. For 2D, random generation can be done based on a bivariate normal distribution. For a given point $(x_i, y_i)$, the first step is to compute initial noise, which is done as:
 
 $$
@@ -42,6 +51,7 @@ $$
 \begin{pmatrix} e_x \\ e_y \end{pmatrix} \sim Sobol(r, dim = 2) 
 $$
 
+## Noise direction 
 The second step is to rotate the noise according to the observed direction in the data. Direction controls how the observed data influence the jittering; in particular, the correlation structure of the data affects the jittering direction through the correlation coefficient.
 
 $$
@@ -52,8 +62,7 @@ where $\mbox{chol}[]$ stands for Cholesky decomposition. (is this having an effe
 
 Correlation, $\rho_{xy}$, can be computed using all points (global) or with the closer points to the one being jittered (local). A local correlation can be computed using only neighbors or using kernel weights.
 
-Combining the 2 parameters gives 4 ways to jitter scatter plots: R-L, R-G, Q-L, Q-G.
-
+## Jittering separation (not done!)
 A third parameter that might be worth adding is Voronoi constraint. When Voronoi is TRUE, jittered points are forced to lie within the Voronoi cell of the corresponding observed point. This ensures the resulting jittered plot does not overlap and naturally controls the amount of jittering. (**Not sure how hard or if this is possible to do!!**)
 
 # Application examples
@@ -161,9 +170,15 @@ exapmle_fn(genff = gendt_nonlinear, nn = 50)
 
 ## More interesting cases
 
+Real cases/data scenarios where 2D-jittering is useful/needed: 
+
 -   Survey data scatter plot with subsampling method
 
 -   Age and deaths? Excess deaths in COVID?
+
+- more ??? 
+
+
 
 # Discussion
 
