Added Wilkinson reference

--- a/inst/paper/references.bib
+++ b/inst/paper/references.bib
@@ -102,3 +102,18 @@
   year={2024},
   publisher={IEEE}
 }
+
+@article{Wilkinson01081999,
+  author = {Leland Wilkinson},
+  title = {Dot Plots},
+  journal = {The American Statistician},
+  volume = {53},
+  number = {3},
+  pages = {276--281},
+  year = {1999},
+  publisher = {ASA Website},
+  doi = {10.1080/00031305.1999.10474474},
+  URL = {https://www.tandfonline.com/doi/abs/10.1080/00031305.1999.10474474}
+}
+
+
